<resources>

    <string name="app_name">Warthon</string>
    <string name="title_activity_main">Warthon</string>
    <string name="title_activity_registrar">Regístrate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- etiquetas para el login activity -->
    <string name="login_correo">Correo</string>
    <string name="login_validate_correo_vacio">Ingrese el correo</string>
    <string name="login_validate_correo_es_correo">Ingrese un correo valido</string>
    <string name="login_password">Password</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="login_label">Si no tienes cuenta registrate</string>
    <string name="login_aqui">aquí</string>
    <string name="login_google">Ingresar con google</string>
    <string name="login_todo">TODO</string>
    <string name="login_validate_password">Ingresar Password</string>

    <!-- etiquetas para el registo activity -->
    <string name="registro_correo">Correo</string>
    <string name="registro_correo_validar">Ingrese un correo</string>
    <string name="registro_password">Password</string>
    <string name="registro_passwor_validar">Ingrese un password</string>
    <string name="registro_nombres">Nombres</string>
    <string name="registro_nombres_validar">Ingrese sus nombre o nombres</string>
    <string name="registro_apellidos">Apellidos</string>
    <string name="registro_apellidos_validar">Ingresa tus apellidos o apellido</string>
    <string name="registro_telefono">Teléfono</string>
    <string name="registro_telefono_validar">Ingrese su teléfono</string>
    <string name="registro_dni">DNI</string>
    <string name="registro_dni_validar">Ingrese tu DNI</string>
    <string name="registro_registrar">Registrar</string>
    <string name="registro_usuario_creado">El usuario se creo exitosamente</string>

    <!-- eiquetas para el main activity -->
    <string name="main_servicios">Servicios Warthon</string>
    <string name="main_drescripcion">Encuentra tu tranquilidad a tus problemas</string>
    <string name="main_img_descripcion">Esta imagen es la imagen de los socios del estudio Warthon</string>
    <string name="main_servicio">Servicios</string>
    <string name="main_consulta">Tipo de consulta</string>
    <string name="main_btn_consultar">Consultar</string>
    <string name="menu_title_inicio">Inicio</string>
    <string name="menu_title_chat">Historial de chat</string>
    <string name="menu_title_call">Historial de video llamadas</string>
    <string name="menu_title_citas">Mis citas</string>
    <string name="menu_title_otros">Otras opciones</string>
    <string name="menu_title_signoff">Cerrar sesión</string>
    <string name="main_abogados">Abogados</string>


    <string name="default_web_client_id2">435874085491-hejp0omgkac3tvnmhj4ah0i6muc1oqco.apps.googleusercontent.com</string>

    <!-- etiquetas para en activity main-->
    <string-array name="servicios_legales">
        <item>Derecho corporativo</item>
        <item>Proteccion al consumidor</item>
        <item>Derecho financiero</item>
        <item>Solución de controversias y litigios</item>
        <item>Derecho penal</item>
        <item>Energia y minas</item>
        <item>Derecho laboral y seguridad social</item>
        <item>Medio ambiente</item>
        <item>Tributaria</item>
        <item>Civil</item>
        <item>Derecho migratorio</item>
        <item>Derecho aduanero</item>
    </string-array>

    <string-array name="tipo_de_consulta">
        <item>Consulta chat</item>
        <item>Consulta video llamada</item>
    </string-array>

    <string-array name="lista_abogados">
        <item>Katty Cachay</item>
        <item>Yorry Warthon</item>
    </string-array>

</resources>
