<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/main_menu_inicio"
            android:title="@string/menu_title_inicio" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/main_menu_chat"
            android:title="@string/menu_title_chat" />
        <item
            android:id="@+id/nav_llamadas"
            android:icon="@drawable/main_menu_llamadas"
            android:title="@string/menu_title_call" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/main_menu_citas"
            android:title="@string/menu_title_citas" />
    </group>

    <item android:title="@string/menu_title_otros">
        <menu>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/main_menu_salir"
                android:title="@string/menu_title_signoff" />
        </menu>
    </item>

</menu>
